--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ deployment:
   hub:
     branch: [circle_ci_publish, master]
     commands:
-      - yes | docker login -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
+      - docker login -u $DOCKER_HUB_USER_ID -p $DOCKER_HUB_PWD
       - docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
       - docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerapp:latest
       - docker push $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
